Examples/test-suite/errors/cpp_enum_bad_underlying_type.i
%module xxx

enum stuff : float {
   FOO, BAR
};
